[gd_scene format=3]

[ext_resource path="res://Scripts/TeamCustomization.gd" type="Script" id=1]

[node name="TeamCustomization" type="Control"]
script = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 600
margin_bottom = 400
layout_mode = 2

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
text = "Кастомизация команды"
align = 1

[node name="LineEditTeamName" type="LineEdit" parent="VBoxContainer"]
placeholder_text = "Введите название команды"

[node name="ColorPicker" type="ColorPickerButton" parent="VBoxContainer"]
color = Color(0.3, 0.3, 0.8)

[node name="LabelLogo" type="Label" parent="VBoxContainer"]
text = "Логотип (пока не реализовано)"

[node name="ButtonSave" type="Button" parent="VBoxContainer"]
text = "Сохранить"
